--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,9 @@ h1{
     margin-top: 17px;
 }
 /* Classe de esconder */
-/* .hide {
+.hide {
     display: none !important;
-}  */
+}
 /* Placar */
 #scoreboard-container{
     font-weight: bold;
@@ -96,6 +96,6 @@ h1{
     background-color: #000;
     color: #FFF;
     padding: 20px;
-    display: none;
+    /*display: none;*/
 }
 
