--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body{
     text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    /*font-family: Helvetica, sans-serif;*/
+    font-family: Helvetica, sans-serif;
 }
 h1{
-    font-size: 30px;
+    font-size: 42px;
 }
 /* Botões */
 #buttons-container button{
