--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ h1{
     font-size: 42px;
 }
 /* Botões */
+
+#buttons-container {
+    margin-bottom: 20px;
+  }
+
 #buttons-container button{
     border: none;
     padding: 10px 15px;
@@ -70,6 +75,7 @@ h1{
     margin-right: auto;
 }
 .score-box{
+    display: inline-block;
     margin: 0 20px;
 }
 #x-scoreboard{
